@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-26T08:18:57Z",
-  "count_outdated" : 415,
-  "uniques_outdated" : 239,
-  "count" : 441,
+  "timestamp" : "2022-07-26T16:21:08Z",
+  "count_outdated" : 417,
+  "uniques_outdated" : 240,
+  "count" : 442,
   "uniques" : 255,
   "clones" : [
-    {
-      "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 2,
